  StateObserver.addListeningAction() removed
  EventListener added, replaces ActionListener throughout
  Event.fire() parameter type changed from ActionEvent to Object
  EventListener.eventOccurred() parameter changed from ActionEvent to Object
  EventListener.eventOccurred() overloaded parameterless
  EventAdapter added
  Attribute.hasDescription() removed
  Util.initializeRegistry() and getRegistry() moved to ServerUtil
  Util.setClipboard() moved to UiUtil
  EntityPanel.checkIfInitialized() added and used
  EntityTablePanel.checkIfInitialized() added and used
  Column.columnHasDefaultValue() and isDenormalized() pushed down to Property.ColumnProperty
  framework.client.model.event package removed, InsertEvent, InsertListener, UpdateEvent, UpdateListener, DeleteEvent and DeleteListener removed
  InsertEvent, UpdateEvent and DeleteEvent made inner classes (interfaces) of EntityEditModel
  DefaultEntityEditModel.InsertEventImpl, UpdateEventImpl and DeleteEventImpl added
  FilteredTableModel.add/removeColumnHidden/ShownListener() generified
  EntityConnectionImpl.selectMany() bug fixed, no longer commits if the criteria is marked as selectForUpdate, tested
  EntityCriteria, EntitySelectCriteria, some javadoc improvements
  PropertyImpl, unused constructors removed
  ValueChangeMap.add/RemoveValueListener() parameter now ValueChangeListener
  ValueChangeMap merged up into ValueMap, removed
  ValueMap.initializeValue() removed, implementations appeared not to do anything but call setValue()
  Entity.initializeValue() removed, see above
  ValueMap.handleSetAs() removed, was overridden in EntityImpl only to copy the cached toString value from the source entity, not worth the complexity
  CriteriaProvider removed, practically unused
  ValueChangeEvent.valueOwner property removed, fixing a cyclical dependency
  EntityTableCellRenderer, minor refactoring
  EntityLookupField, duplicate code refactored into UiUtil.prepareScrollPanelDialog()